# cmbeasy

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  INSTALLATION  LICENSE_CMBEASY  LICENSE_CMBFAST  Makefile  configuration.cfg
analyze/LymanAlpha/PatMcDonald/: CPP.h  GlassInterpolator.cc  GlassInterpolator.h  LyaFchi2Interpolator.cc  LyaFchi2Interpolator.h  ObjectInSpace.cc  ObjectInSpace.h  mynrutils.cc  mynrutils.h  mysvdlsq.cc  myutils.cc  (+8 more)
analyze/cbi2/: cbi2.cc  cbi2.h
analyze/newdatcl/: newdatclchi2.cc  newdatclchi2.h
analyze/wmap7/: WMAP_7yr_gibbs.cc  WMAP_7yr_gibbs.h  WMAP_7yr_likelihood.cc  WMAP_7yr_likelihood.h  WMAP_7yr_options.cc  WMAP_7yr_options.h  WMAP_7yr_teeebb_pixlike.cc  WMAP_7yr_teeebb_pixlike.h  WMAP_7yr_tetbeebbeb_pixlike.cc  WMAP_7yr_tetbeebbeb_pixlike.h  WMAP_7yr_tt_beam_and_ptsrc_chisq.cc  WMAP_7yr_tt_beam_and_ptsrc_chisq.h  WMAP_7yr_tt_pixlike.cc  WMAP_7yr_tt_pixlike.h  WMAP_7yr_util.cc  WMAP_7yr_util.h  br_mod_dist.cc  br_mod_dist.h  port_helper.h  read_archive_map.cc  read_archive_map.h  read_fits.cc  read_fits.h  test.cc
anisotropy/: .driver.cc.swp  DataManager.cc  DataManager.h  allskylensing.cc  allskylensing.h  analyzethis.cc  analyzethis.h  cl.cc  cl.h  cmbcalc.cc  cmbcalc.h  controlpanel.h  distill.cc  driver.cc  integrator.cc  integrator.h  jlens.cc  jlgen.cc  lensing.cc  lensing.h  model.cc  model.h  newdatreader.cc  newdatreader.h  scalarintegrator.cc  scalarintegrator.h  scalartrapezoidintegrator.cc  scalartrapezoidintegrator.h  tensorintegrator.cc  tensorintegrator.h  tensortrapezoidintegrator.cc  tensortrapezoidintegrator.h  test_mass_function.cc  testsneroutines.cc  xdriver.cc
chain/: chainshop.cc  chainshop.h  lowlevelplot.cc  lowlevelplot.h  postscriptplot.cc  postscriptplot.h
cmakescripts/: FindCfitsio.cmake  FindGSL.cmake  FindMinuit2.cmake  extracommands.inc
cosmos/: arbitrary.cc  arbitrary.h  arbitraryomega.cc  arbitraryomega.h  arthur.cc  arthur.h  basecosmos.h  celestine.h  cosmos.cc  cosmos.h  crossover.cc  crossover.h  crossoverfield.cc  crossoverfield.h  distcelestine.cc  distcelestine.h  distcosmos.cc  distcosmos.h  exponential.cc  exponential.h  gauge.h  massiveneutrinos.cc  massiveneutrinos.h  omegastep.cc  omegastep.h  perturbation.cc  perturbation.h  perturbationfactory.cc  perturbationfactory.h  quintcosmos.cc  quintcosmos.h  quintessence.cc  quintessence.h  quintsynchronous.cc  quintsynchronous.h  ratra.cc  ratra.h  recfast.cc  recfast.h  recfastalpha.cc  (+10 more)
coupled/: cncosmos.cc  cncosmos.h  cninvariant.cc  cninvariant.h  coupled_corasaniti.cc  coupledexp.cc  coupledexp.h  coupledinvariant.cc  coupledinvariant.h  coupledleaping.cc  coupledleaping.h  coupledquintcosmos.cc  coupledquintcosmos.h  coupling.h  decayingdedm_driver.cc  decayingdedmcosmos.cc  decayingdedmcosmos.h  exponentialcoupling.cc  exponentialcoupling.h  invariant.cc  invariant.h  massiveneutrinosnew.cc  massiveneutrinosnew.h  neutrinodriver.cc  perturbationtracker.cc  perturbationtracker.h  speedycoupledinvariant.cc  speedycoupledinvariant.h
gui/: automaticrunner.cc  automaticrunner.h  cetextedit.h  cmbeasy.cc  cmbeasywidget.cc  cmbeasywidget.h  cmbmainwindow.cc  cmbmainwindow.h  configurationdialog.cc  configurationdialog.h  design_cmbeasywidget.ui  design_configurationdialog.ui  design_modelinspector.ui  design_parameterdock.ui  design_plotcontrol.ui  design_tipdialog.ui  helpwindow.cc  helpwindow.h  likeliworker.h  modelinspectordock.cc  modelinspectordock.h  parameterdock.cc  parameterdock.h  parameterspinbox.h  plotcontrol.cc  plotcontrol.h  plotwidget.cc  plotwidget.h  q4buttongroup.cc  q4buttongroup.h  tipdialog.cc  tipdialog.h  useful.h
massfunction/: mass_function.cc  mass_function.h
mathobject/: .splinetools.cc.swp  anchor.cc  anchor.h  bessel.cc  bessel.h  cleanvector.h  data.cc  data.h  global.h  mathobject.h  minmax.h  miscmath.cc  miscmath.h  multigaussian.cc  multigaussian.h  rollingaverage.cc  rollingaverage.h  safevector.h  snedata.cc  snedata.h  spline.cc  spline.h  splinetools.cc  splinetools.h
montecarlo/: CMakeLists.txt  Makefile  dummymodel.cc  fastslowexample.cc  fastslowstepper.cc  fastslowstepper.h  howto-montecarlo.txt  mc_cn_cmb.cc  mc_decaying_dedm.cc  mc_dedm_corasaniti.cc  mc_general.cc  mc_uncoupled_quintessence.cc  mc_vde.cc  mcerror.h  mclikelihoodcalculator.cc  mclikelihoodcalculator.h  mcmain.cc  mcmodel.cc  mcmodel.h  mcrunner.cc  mcrunner.h  mcsettings.cc  mcsettings.h  mcsimpleexample.cc  mctaskinfo.cc  mctaskinfo.h  mcutils.cc  mcutils.h  nestedsampler.cc  nestedsampler.h
output/: .gitignore  readme_output.txt
resources/: .gitignore  advancedpostscript.eps  configuration.cfg  parameters.cmb
resources/2df/: 2dFGRS_pk_win.txt
resources/CBI2.0_newdat/: README
resources/acbar/: acbar_window_1  acbar_window_10  acbar_window_11  acbar_window_12  acbar_window_13  acbar_window_14  acbar_window_2  acbar_window_3  acbar_window_4  acbar_window_5  acbar_window_6  acbar_window_7  acbar_window_8  acbar_window_9
resources/acbar08/: README
resources/boomerang/: B03_NA_21July05.newdat  README_newdat
resources/cbi2/: CBI2.0_2to14.dataset  CBI2.0_2to141  CBI2.0_2to1410  CBI2.0_2to1411  CBI2.0_2to1412  CBI2.0_2to1413  CBI2.0_2to142  CBI2.0_2to143  CBI2.0_2to144  CBI2.0_2to145  CBI2.0_2to146  CBI2.0_2to147  CBI2.0_2to148  CBI2.0_2to149
resources/gui_data/: tips.txt  wmap_binned_tt_spectrum_5yr_v3.txt
resources/help/: about.html  basiccontrol.html  documentation.webprj  index.html  introduction.html  likelyhood.html  mainwindow.html  upperleft.html  upperright.html
resources/sdss_lrg/: README  sdss_lrg_measurements.txt
resources/sdss_lrg10/: lrgdr7_invcov.txt
resources/wmap/: wmap_bb_spectrum_7yr_v4p1.txt  wmap_bb_spectrum_by_freq_7yr_v4p1.txt  wmap_binned_bb_spectrum_7yr_v4p1.txt  wmap_binned_ee_spectrum_7yr_v4p1.txt  wmap_binned_te_spectrum_7yr_v4p1.txt  wmap_binned_tt_spectrum_7yr_v4p1.txt  wmap_ee_spectrum_7yr_v4p1.txt  wmap_te_spectrum_7yr_v4p1.txt  wmap_tt_spectrum_7yr_v4p1.txt
vde/: .driver_vde.cc.swo  driver_vde.cc  grid.cc  grid.h  vdecosmos.cc  vdecosmos.h  vectorde.cc  vectorde.h
(+19 files in other folders)
